--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-              <h1>Om mig</h1>
+              <h1>Om Jim Nervall</h1>
         </header>
               <div class="nav">
                   <ul>
