--- a/favorites.html
+++ b/favorites.html
@@ -14,12 +14,13 @@
                   <ul>
                       <li><a href="index.html">Hem</a></li>
                       <li><a href="about.html">Om mig</a></li>
-                      <li><a href="favorites.html">Favoritfilmer</a></li>
+                      <li><a class="active" href="favorites.html">Favoritfilmer</a></li>
                       <li><a href="links.html">Länkar</a></li>
                       <li><a href="contact.html">Kontakt</a></li>
                   </ul>
               </div>
         <main>
+              <h2>Mina favoritfilmer</h2><br>
               <table>
                     <thead>
                       <tr>
