--- a/links.html
+++ b/links.html
@@ -15,25 +15,26 @@
                       <li><a href="index.html">Hem</a></li>
                       <li><a href="about.html">Om mig</a></li>
                       <li><a href="favorites.html">Favoritfilmer</a></li>
-                      <li><a href="links.html">Länkar</a></li>
+                      <li><a class="active" href="links.html">Länkar</a></li>
                       <li><a href="contact.html">Kontakt</a></li>
                   </ul>
               </div>
         <main>
+              <h2>Bra länkar</h2><br>
                   <ul>
-                      <li><h2>Nyhetssidor</h2></li>
+                      <li><h3>Nyhetssidor</h3></li>
                           <ul>
-                              <li><a href="http://wwww.aftonbladet.se">Aftonbladet</a></li>
-                              <li><a href="http://wwww.sydsvenskan.se">Sydsvenskan</a></li>
-                              <li><a href="http://wwww.hd.se">Helsingborgs Dagblad</a></li>
+                              <li><a href="https://www.aftonbladet.se/">Aftonbladet</a></li>
+                              <li><a href="https://www.sydsvenskan.se/">Sydsvenskan</a></li>
+                              <li><a href="https://www.hd.se/">Helsingborgs Dagblad</a></li>
                           </ul>
-                      <li><h2>Blandade sidor</h2></li>
-                              <li><a href="http://wwww.google.com">Google</a></li>
-                              <li><a href="http://wwww.wikipedia.com">Wikipedia</a></li>
+                      <li><h3>Blandade sidor</h3></li>
+                              <li><a href="https://www.google.se/">Google</a></li>
+                              <li><a href="https://www.wikipedia.org/">Wikipedia</a></li>
                                   <ul>
-                                      <li><h2>Sociala medier</h2></li>
-                                      <li><a href="http://wwww.facebook.com">Facebook</a></li>
-                                      <li><a href="http://wwww.instagram.com">Instagram</a></li>
+                                      <li><h3>Sociala medier</h3></li>
+                                      <li><a href="https://wwww.facebook.com">Facebook</a></li>
+                                      <li><a href="https://www.instagram.com/">Instagram</a></li>
                                   </ul>
                   </ul>
         </main>
