--- a/about.html
+++ b/about.html
@@ -2,46 +2,52 @@
 <html lang="sv">
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto" rel="stylesheet">
+        <link href="https://unpkg.com/ionicons@4.4.2/dist/css/ionicons.min.css" rel="stylesheet">
         <meta charset="utf-8">
-        <title>Jim Nervall</title>
+        <title>Jim Nervall - Om mig</title>
     <!-- kommentar -->
     </head>
     <body>
-        <header>
-              <h1>Om Jim Nervall</h1>
-        </header>
-              <div class="nav">
-                  <ul>
-                      <li><a href="index.html">Hem</a></li>
-                      <li><a class="active" href="about.html">Om mig</a></li>
-                      <li><a href="favorites.html">Favoritfilmer</a></li>
-                      <li><a href="links.html">Länkar</a></li>
-                      <li><a href="contact.html">Kontakt</a></li>
-                  </ul>
-              </div>
-        <main>
-              <h2>Om mig</h2><br>
-              <img src="img/jim.jpg" alt="Foto av Jim"><br><br>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </p><br><br>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br><br>
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </p>
-        </main>
-        <footer>
-              <div class="footer-container">
-                  <ul>
-                      <li><h2>Kontakt</h2></li>
-                      <li>Jim Nervall</li>
-                      <li><a href="mailto:nervall@hotmail.com">nervall@hotmail.com</a></li>
-                      <li><a href="#">www.nervall.se</a></li>
-                  </ul>
-              </div>
-        </footer>
+        <div class="background-box">
+                <header>
+                    <div class="nav">
+                        <ul>
+                            <li><a href="index.html">Hem</a></li>
+                            <li><a class="active" href="about.html">Om mig</a></li>
+                            <li><a href="favorites.html">Favoritfilmer</a></li>
+                            <li><a href="links.html">Länkar</a></li>
+                            <li><a href="contact.html">Kontakt</a></li>
+                        </ul>
+                    </div>                            
+                </header>
+                <div class="main-box">
+                <main>  
+                    <h1>Det här är jag!</h1><br>
+                    <div class="about-wrapper">
+                    <img src="img/IMG_5829.JPG" alt="Foto av Jim">
+                    <div class="p-container">
+                        <p> <b>Namn:</b> Jim Nervall<br>
+                            <b>Tidigare:</b> Grafisk formgivare<br>
+                            <b>Studerar till:</b> Frontendutvecklare<br>
+                            <b>Intressen:</b> Kodning, grafik, träning, fotboll och min familj.<br><br>
+                            <b>Övrigt:</b> Här ska stå något kul. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br>
+                        </p>
+                    </div>
+                    </div>            
+                </main>
+                    
+            
+                <footer>
+                    <div class="footer-container">
+                        <p>&copy; Jim Nervall 2018</p> 
+                        <a href="mailto:nervall@hotmail.com">nervall@hotmail.com</a>
+                        <a href="https://facebook.com"><i class="icon ion-logo-facebook"></i></a>
+                        <a href="https://github.com"><i class="icon ion-logo-github"></i></a>
+                        <a href="https://instagram.com"><i class="icon ion-logo-instagram"></i></a>
+                    </div>
+                </footer>
+            </div>
+        </div>
     </body>
 </html>
