--- a/action.html
+++ b/action.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto" rel="stylesheet">
         <link href="https://unpkg.com/ionicons@4.4.2/dist/css/ionicons.min.css" rel="stylesheet">
         <meta charset="utf-8">
-        <title>Jim Nervall - Hem</title>
+        <title>Jim Nervall - Tack för ditt meddelande</title>
     <!-- kommentar -->
     </head>
     <body>
