--- a/links.html
+++ b/links.html
@@ -2,26 +2,29 @@
 <html lang="sv">
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto" rel="stylesheet">
+        <link href="https://unpkg.com/ionicons@4.4.2/dist/css/ionicons.min.css" rel="stylesheet">
         <meta charset="utf-8">
-        <title>Jim Nervall</title>
+        <title>Jim Nervall - Bra länkar</title>
     <!-- kommentar -->
     </head>
     <body>
-        <header>
-              <h1>Länkar</h1>
-        </header>
-              <div class="nav">
-                  <ul>
-                      <li><a href="index.html">Hem</a></li>
-                      <li><a href="about.html">Om mig</a></li>
-                      <li><a href="favorites.html">Favoritfilmer</a></li>
-                      <li><a class="active" href="links.html">Länkar</a></li>
-                      <li><a href="contact.html">Kontakt</a></li>
-                  </ul>
-              </div>
-        <main>
-              <h2>Bra länkar</h2><br>
-                  <ul>
+        <div class="background-box">
+                <header>
+                    <div class="nav">
+                        <ul>
+                            <li><a href="index.html">Hem</a></li>
+                            <li><a href="about.html">Om mig</a></li>
+                            <li><a href="favorites.html">Favoritfilmer</a></li>
+                            <li><a class="active" href="links.html">Länkar</a></li>
+                            <li><a href="contact.html">Kontakt</a></li>
+                        </ul>
+                    </div>                            
+                </header>
+                <div class="main-box">
+                <main>  
+                    <h1>Här är några bra länkar</h1><br>
+                    <ul>
                       <li><h3>Nyhetssidor</h3></li>
                           <ul>
                               <li><a href="https://www.aftonbladet.se/">Aftonbladet</a></li>
@@ -29,24 +32,27 @@
                               <li><a href="https://www.hd.se/">Helsingborgs Dagblad</a></li>
                           </ul>
                       <li><h3>Blandade sidor</h3></li>
+                          <ul>
                               <li><a href="https://www.google.se/">Google</a></li>
                               <li><a href="https://www.wikipedia.org/">Wikipedia</a></li>
-                                  <ul>
-                                      <li><h3>Sociala medier</h3></li>
-                                      <li><a href="https://wwww.facebook.com">Facebook</a></li>
-                                      <li><a href="https://www.instagram.com/">Instagram</a></li>
-                                  </ul>
-                  </ul>
-        </main>
-        <footer>
-              <div class="footer-container">
-                  <ul>
-                      <li><h2>Kontakt</h2></li>
-                      <li>Jim Nervall</li>
-                      <li><a href="mailto:nervall@hotmail.com">nervall@hotmail.com</a></li>
-                      <li><a href="#">www.nervall.se</a></li>
-                  </ul>
-              </div>
-        </footer>
+                          </ul>
+                      <li><h3>Sociala medier</h3></li>
+                          <ul>
+                              <li><a href="https://wwww.facebook.com">Facebook</a></li>
+                              <li><a href="https://www.instagram.com/">Instagram</a></li>
+                          </ul>
+                  </ul>            
+                </main>
+                <footer>
+                    <div class="footer-container">
+                        <p>&copy; Jim Nervall 2018</p> 
+                        <a href="mailto:nervall@hotmail.com">nervall@hotmail.com</a>
+                        <a href="https://facebook.com"><i class="icon ion-logo-facebook"></i></a>
+                        <a href="https://github.com"><i class="icon ion-logo-github"></i></a>
+                        <a href="https://instagram.com"><i class="icon ion-logo-instagram"></i></a>
+                    </div>
+                </footer>
+            </div>
+        </div>
     </body>
 </html>
