--- a/favorites.html
+++ b/favorites.html
@@ -5,78 +5,80 @@
         <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto" rel="stylesheet">
         <link href="https://unpkg.com/ionicons@4.4.2/dist/css/ionicons.min.css" rel="stylesheet">
         <meta charset="utf-8">
-        <title>Jim Nervall - Mina favoritfilmer</title>
+        <title>Jim Nervall - Favoritfilmer</title>
     <!-- kommentar -->
     </head>
     <body>
         <div class="background-box">
                 <header>
-                    <div class="nav">
+                    <nav class="center">
                         <ul>
                             <li><a href="index.html">Hem</a></li>
                             <li><a href="about.html">Om mig</a></li>
-                            <li><a class="active" href="favorites.html">Favoritfilmer</a></li>
+                            <li class="active"><a href="favorites.html">Favoritfilmer</a></li>
                             <li><a href="links.html">Länkar</a></li>
                             <li><a href="contact.html">Kontakt</a></li>
                         </ul>
-                    </div>                            
+                    </nav>   
                 </header>
-                <div class="main-box">
-                <main>  
-                    <h1>Mina favoritfilmer</h1><br>
-                    <table>
-                    <thead>
-                      <tr>
-                        <th>Title</th>
-                        <th>Genre</th>
-                        <th>Main Character</th>
-                        <th>Review Score</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td><a href="https://www.imdb.com/title/tt0120737/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=e31d89dd-322d-4646-8962-327b42fe94b1&pf_rd_r=64DG7W7K5BX9S27CDAWG&pf_rd_s=center-1&pf_rd_t=15506&pf_rd_i=top&ref_=chttp_tt_11">Sagen om Ringen</a></td>
-                        <td>Fantasy</td>
-                        <td>Elijah Wood,<br>Ian McKellen</td>
-                        <td>8,8</td>
-                      </tr>
-                      <tr>
-                        <td><a href="https://www.imdb.com/title/tt0111161/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=e31d89dd-322d-4646-8962-327b42fe94b1&pf_rd_r=64DG7W7K5BX9S27CDAWG&pf_rd_s=center-1&pf_rd_t=15506&pf_rd_i=top&ref_=chttp_tt_1">Nyckeln till frihet</a></td>
-                        <td>Drama</td>
-                        <td>Tim Robbins,<br>Morgan Freeman</td>
-                        <td>9,3</td>
-                      </tr>
-                      <tr>
-                        <td><a href="https://www.imdb.com/title/tt0068646/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=e31d89dd-322d-4646-8962-327b42fe94b1&pf_rd_r=64DG7W7K5BX9S27CDAWG&pf_rd_s=center-1&pf_rd_t=15506&pf_rd_i=top&ref_=chttp_tt_2">Gudfadern</a></td>
-                        <td>Drama</td>
-                        <td>Al Pacino,<br>Marlon Brando</td>
-                        <td>9,2</td>
-                      </tr>
-                      <tr>
-                        <td><a href="https://www.imdb.com/title/tt0108052/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=e31d89dd-322d-4646-8962-327b42fe94b1&pf_rd_r=64DG7W7K5BX9S27CDAWG&pf_rd_s=center-1&pf_rd_t=15506&pf_rd_i=top&ref_=chttp_tt_6">Schindler´s List</a></td>
-                        <td>Drama</td>
-                        <td>Liam Neeson,<br>Ben Kingsley</td>
-                        <td>8,9</td>
-                      </tr>
-                      <tr>
-                        <td><a href="https://www.imdb.com/title/tt0076759/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=e31d89dd-322d-4646-8962-327b42fe94b1&pf_rd_r=64DG7W7K5BX9S27CDAWG&pf_rd_s=center-1&pf_rd_t=15506&pf_rd_i=top&ref_=chttp_tt_21">Stjärnornas krig</a></td>
-                        <td>Fantasy</td>
-                        <td>Harrison Ford,<br>Carrie Fisher</td>
-                        <td>8,6</td>
-                      </tr>
-                    </tbody>
-                  </table>             
+                <main>
+                    <div class="main-container">
+                        <h1>Mina favoritfilmer</h1><br>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Title</th>
+                                    <th>Genre</th>
+                                    <th>Main Character</th>
+                                    <th>Review Score</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td><a href="https://www.imdb.com/title/tt0120737/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=e31d89dd-322d-4646-8962-327b42fe94b1&pf_rd_r=64DG7W7K5BX9S27CDAWG&pf_rd_s=center-1&pf_rd_t=15506&pf_rd_i=top&ref_=chttp_tt_11">Sagen om Ringen</a></td>
+                                    <td>Fantasy</td>
+                                    <td>Elijah Wood,<br>Ian McKellen</td>
+                                    <td>8,8</td>
+                                </tr>
+                                <tr>
+                                    <td><a href="https://www.imdb.com/title/tt0111161/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=e31d89dd-322d-4646-8962-327b42fe94b1&pf_rd_r=64DG7W7K5BX9S27CDAWG&pf_rd_s=center-1&pf_rd_t=15506&pf_rd_i=top&ref_=chttp_tt_1">Nyckeln till frihet</a></td>
+                                    <td>Drama</td>
+                                    <td>Tim Robbins,<br>Morgan Freeman</td>
+                                    <td>9,3</td>
+                                </tr>
+                                <tr>
+                                    <td><a href="https://www.imdb.com/title/tt0068646/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=e31d89dd-322d-4646-8962-327b42fe94b1&pf_rd_r=64DG7W7K5BX9S27CDAWG&pf_rd_s=center-1&pf_rd_t=15506&pf_rd_i=top&ref_=chttp_tt_2">Gudfadern</a></td>
+                                    <td>Drama</td>
+                                    <td>Al Pacino,<br>Marlon Brando</td>
+                                    <td>9,2</td>
+                                </tr>
+                                <tr>
+                                    <td><a href="https://www.imdb.com/title/tt0108052/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=e31d89dd-322d-4646-8962-327b42fe94b1&pf_rd_r=64DG7W7K5BX9S27CDAWG&pf_rd_s=center-1&pf_rd_t=15506&pf_rd_i=top&ref_=chttp_tt_6">Schindler´s List</a></td>
+                                    <td>Drama</td>
+                                    <td>Liam Neeson,<br>Ben Kingsley</td>
+                                    <td>8,9</td>
+                                </tr>
+                                <tr>
+                                    <td><a href="https://www.imdb.com/title/tt0076759/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=e31d89dd-322d-4646-8962-327b42fe94b1&pf_rd_r=64DG7W7K5BX9S27CDAWG&pf_rd_s=center-1&pf_rd_t=15506&pf_rd_i=top&ref_=chttp_tt_21">Stjärnornas krig</a></td>
+                                    <td>Fantasy</td>
+                                    <td>Harrison Ford,<br>Carrie Fisher</td>
+                                    <td>8,6</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </main>
                 <footer>
                     <div class="footer-container">
-                        <p>&copy; Jim Nervall 2018</p> 
-                        <a href="mailto:nervall@hotmail.com">nervall@hotmail.com</a>
-                        <a href="https://facebook.com"><i class="icon ion-logo-facebook"></i></a>
-                        <a href="https://github.com"><i class="icon ion-logo-github"></i></a>
-                        <a href="https://instagram.com"><i class="icon ion-logo-instagram"></i></a>
+                        <div class="centered">
+                            <p>&copy; Jim Nervall 2018</p> 
+                            <a href="mailto:nervall@hotmail.com">nervall@hotmail.com</a>
+                            <a href="https://facebook.com"><i class="icon ion-logo-facebook"></i></a>
+                            <a href="https://github.com"><i class="icon ion-logo-github"></i></a>
+                            <a href="https://instagram.com"><i class="icon ion-logo-instagram"></i></a>
+                        </div>
                     </div>
                 </footer>
-            </div>
         </div>
     </body>
 </html>
