--- a/links.html
+++ b/links.html
@@ -5,54 +5,57 @@
         <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto" rel="stylesheet">
         <link href="https://unpkg.com/ionicons@4.4.2/dist/css/ionicons.min.css" rel="stylesheet">
         <meta charset="utf-8">
-        <title>Jim Nervall - Bra länkar</title>
+        <title>Jim Nervall - Länkar</title>
     <!-- kommentar -->
     </head>
     <body>
         <div class="background-box">
                 <header>
-                    <div class="nav">
+                    <nav class="center">
                         <ul>
                             <li><a href="index.html">Hem</a></li>
                             <li><a href="about.html">Om mig</a></li>
                             <li><a href="favorites.html">Favoritfilmer</a></li>
-                            <li><a class="active" href="links.html">Länkar</a></li>
+                            <li class="active"><a href="links.html">Länkar</a></li>
                             <li><a href="contact.html">Kontakt</a></li>
                         </ul>
-                    </div>                            
+                    </nav>   
                 </header>
-                <div class="main-box">
-                <main>  
-                    <h1>Här är några bra länkar</h1><br>
-                    <ul>
-                      <li><h3>Nyhetssidor</h3></li>
-                          <ul>
-                              <li><a href="https://www.aftonbladet.se/">Aftonbladet</a></li>
-                              <li><a href="https://www.sydsvenskan.se/">Sydsvenskan</a></li>
-                              <li><a href="https://www.hd.se/">Helsingborgs Dagblad</a></li>
-                          </ul>
-                      <li><h3>Blandade sidor</h3></li>
-                          <ul>
-                              <li><a href="https://www.google.se/">Google</a></li>
-                              <li><a href="https://www.wikipedia.org/">Wikipedia</a></li>
-                          </ul>
-                      <li><h3>Sociala medier</h3></li>
-                          <ul>
-                              <li><a href="https://wwww.facebook.com">Facebook</a></li>
-                              <li><a href="https://www.instagram.com/">Instagram</a></li>
-                          </ul>
-                  </ul>            
+                
+                <main>
+                    <div class="main-container">
+                        <h1>Här är några bra länkar</h1><br>
+                        <ul>
+                            <li><h3>Nyhetssidor</h3></li>
+                                <ul>
+                                    <li><a href="https://www.aftonbladet.se/">Aftonbladet</a></li>
+                                    <li><a href="https://www.sydsvenskan.se/">Sydsvenskan</a></li>
+                                    <li><a href="https://www.hd.se/">Helsingborgs Dagblad</a></li>
+                                </ul>
+                            <li><h3>Blandade sidor</h3></li>
+                                <ul>
+                                    <li><a href="https://www.google.se/">Google</a></li>
+                                    <li><a href="https://www.wikipedia.org/">Wikipedia</a></li>
+                                </ul>
+                            <li><h3>Sociala medier</h3></li>
+                                <ul>
+                                    <li><a href="https://wwww.facebook.com">Facebook</a></li>
+                                    <li><a href="https://www.instagram.com/">Instagram</a></li>
+                                </ul>
+                        </ul>
+                    </div>
                 </main>
                 <footer>
                     <div class="footer-container">
-                        <p>&copy; Jim Nervall 2018</p> 
-                        <a href="mailto:nervall@hotmail.com">nervall@hotmail.com</a>
-                        <a href="https://facebook.com"><i class="icon ion-logo-facebook"></i></a>
-                        <a href="https://github.com"><i class="icon ion-logo-github"></i></a>
-                        <a href="https://instagram.com"><i class="icon ion-logo-instagram"></i></a>
+                        <div class="centered">
+                            <p>&copy; Jim Nervall 2018</p> 
+                            <a href="mailto:nervall@hotmail.com">nervall@hotmail.com</a>
+                            <a href="https://facebook.com"><i class="icon ion-logo-facebook"></i></a>
+                            <a href="https://github.com"><i class="icon ion-logo-github"></i></a>
+                            <a href="https://instagram.com"><i class="icon ion-logo-instagram"></i></a>
+                        </div>
                     </div>
                 </footer>
-            </div>
         </div>
     </body>
 </html>
