--- a/about.html
+++ b/about.html
@@ -11,41 +11,43 @@
     <body>
         <div class="background-box">
                 <header>
-                    <div class="nav">
+                    <nav class="center">
                         <ul>
                             <li><a href="index.html">Hem</a></li>
-                            <li><a class="active" href="about.html">Om mig</a></li>
+                            <li class="active"><a href="about.html">Om mig</a></li>
                             <li><a href="favorites.html">Favoritfilmer</a></li>
                             <li><a href="links.html">Länkar</a></li>
                             <li><a href="contact.html">Kontakt</a></li>
                         </ul>
-                    </div>                            
+                    
+                    </nav>   
                 </header>
-                <div class="main-box">
-                <main>  
-                    <h1>Det här är jag!</h1><br>
-                    <div class="about-wrapper">
-                    <img src="img/IMG_5829.JPG" alt="Foto av Jim">
-                    <div class="p-container">
-                        <p> <b>Namn:</b> Jim Nervall<br>
-                            <b>Tidigare:</b> Grafisk formgivare<br>
-                            <b>Studerar till:</b> Frontendutvecklare<br>
-                            <b>Intressen:</b> Kodning, grafik, träning, fotboll och min familj.<br><br>
-                            <b>Övrigt:</b> Här ska stå något kul. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br>
-                        </p>
+                
+                <main>
+                    <div class="main-container">
+                        <h1>Det här är jag</h1><br>
+                        <img src="img/IMG_5829.JPG" alt="Foto av Jim">
+                            <div class="p-container">
+                                <p> <b>Namn:</b> Jim Nervall<br>
+                                <b>Tidigare:</b> Grafisk formgivare<br>
+                                <b>Studerar till:</b> Frontendutvecklare<br>
+                                <b>Intressen:</b> Kodning, grafik, träning, fotboll och min familj.<br><br>
+                                <b>Övrigt:</b> Här ska stå något kul. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br>
+                                </p>
+                            </div>
                     </div>
-                    </div>            
                 </main>
                 <footer>
                     <div class="footer-container">
-                        <p>&copy; Jim Nervall 2018</p> 
-                        <a href="mailto:nervall@hotmail.com">nervall@hotmail.com</a>
-                        <a href="https://facebook.com"><i class="icon ion-logo-facebook"></i></a>
-                        <a href="https://github.com"><i class="icon ion-logo-github"></i></a>
-                        <a href="https://instagram.com"><i class="icon ion-logo-instagram"></i></a>
+                        <div class="centered">
+                            <p>&copy; Jim Nervall 2018</p> 
+                            <a href="mailto:nervall@hotmail.com">nervall@hotmail.com</a>
+                            <a href="https://facebook.com"><i class="icon ion-logo-facebook"></i></a>
+                            <a href="https://github.com"><i class="icon ion-logo-github"></i></a>
+                            <a href="https://instagram.com"><i class="icon ion-logo-instagram"></i></a>
+                        </div>
                     </div>
                 </footer>
-            </div>
         </div>
     </body>
 </html>
